# alfred-desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  alfred  package.json
alfred-cli/: Cargo.toml
alfred-cli/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/scripts/: tauri-cli-runner.mjs
src-tauri/src/: agentos_artifacts.rs  alfred_api_client.rs  analysis_ops.rs  chat_wizard.rs  cli.rs  codex.rs  command_handlers.rs  enrichment.rs  finary.rs  health.rs  helpers.rs  llm.rs  llm_backend.rs  llm_parsing.rs  llm_prompts.rs  main.rs  mcp_progress_relay.rs  mcp_server.rs  openai_client.rs  paths.rs  report.rs  run_index.rs  run_state.rs  run_state_cache.rs  run_stats.rs  runtime_settings.rs  storage.rs  storage_cleanup.rs  tests.rs  updater.rs
src-tauri/src/commands/: auth.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/mappers/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/repositories/sqlite/: migrations.rs  mod.rs  (+2 more)
src-tauri/src/services/: auth_service.rs  bootstrap_service.rs  local_db_service.rs  local_http.rs  mod.rs  native_collection.rs  native_collection_dispatch.rs  native_collection_helpers.rs  native_collection_modes.rs  native_line_analysis.rs  native_mcp_analysis.rs  report_service.rs  sidecar_service.rs  source_service.rs  sync_service.rs  token_service.rs  vault_service.rs
src-tauri/test-fixtures/: pea-run.json
(+53 files in other folders)
