[package]
name = "alfred-cli"
version = "0.2.7"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }
tungstenite = "0.24"
regex = "1"
