[package]
name = "alfred-desktop-backend"
version = "0.2.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }
tungstenite = "0.24"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
